# C_PROGRAMMING_LAB

./: CMakeLists.txt  P13_Algebraic Identities.c  P14_Right angled Triangle.c  P15.1_Relational Operators.c  P15.2_Bitwise Operators.c  P15.3_Logical Operators.c  P15.4_Shift Operators.c
